update profile complete with 1 error for update button

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -13,7 +13,7 @@
             </p>
         </div>
     </div>
-    <form method="post" enctype="multipart/form-data"></form>
+    <form method="POST" enctype="multipart/form-data"></form>
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
