--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,10 +1,10 @@
 {% extends 'blog/base.html' %} {% block content %} {% for post in posts%}
-<article class="media content-section">
+<article class="media content-section d-flex">
     <img src="{{ post.author.profile.image.url }}" class="rounded-circle article-img">
-    <div class="media-body">
-        <div class="article-metadata ">
-            <a class="mr-2" href="{%url 'user-posts' post.author.username %}">{{ post.author }}</a>
-            <small class="text-muted">{{ post.date_posted|date:'F d, Y' }}</small>
+    <div class="media-body ">
+        <div class="article-metadata d-flex flex-column ">
+            <a class=" p-2 text-decoration-none h4" href="{%url 'user-posts' post.author.username %}">{{ post.author }}</a>
+            <small class="text-muted  ">{{ post.date_posted|date:'F d, Y' }}</small>
         </div>
         <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content }}</p>
