--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">
-    <div class="media">
+    <div class="media d-flex">
         <img src="{{ user.profile.image.url }}" class="rounded-circle account-img">
-        <div class="media-body">
+        <div class="media-body p-2">
             <h2 class="account-heading">
                 {{ user.username }}
             </h2>
@@ -15,12 +15,12 @@
     </div>
     <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <fieldset class="form-group d-flex flex-column">
                 <legend class="border-bottom mb-4">
                    Profile Info! 
                 </legend>
-                {{ u_form|crispy }}
-                {{ p_form|crispy }}
+                <div class="mail mb-2">{{ u_form|crispy }}</div>
+                <div class="photo mb-2">{{ p_form|crispy }}</div>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Update!</button>
