--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -6,8 +6,10 @@
             <a class=" p-2 text-decoration-none h4" href="{%url 'user-posts' post.author.username %}">{{ post.author }}</a>
             <small class="text-muted  ">{{ post.date_posted|date:'F d, Y' }}</small>
         </div>
-        <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-        <p class="article-content">{{ post.content }}</p>
+        <div class="article-metadata mt-2">
+            <h2><a class="article-title text-decoration-none" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>
+        </div>
     </div>
 </article>
 {% endfor %} 
